# GetGit

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.claude/: architecturalDecisions.md  guidelines.md  settings.json
docs/: architecture.drawio
getgit/: models.py
getgit/fetchers/: commits.py  repos.py
src/: auth.py  cli.py  github_api.py  storage.py
src/fetchers/: prs.py
src/getgit/: __main__.py  argument_parser.py  auth.py  cli.py  github_api.py  models.py  storage.py
src/getgit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/getgit/application/: __init__.py  app_settings.py  checkpoint_store.py  main.py  user_state_repository.py  user_state_store.py
src/getgit/authentication/: __init__.py  auth.py  github_settings.py  personal_token_auth.py
src/getgit/cli/: __init__.py  argument_parser.py  main.py
src/getgit/exporting/: __init__.py  csv_writer.py  json_file_handler.py  json_writer.py  report_exporter.py  writer.py
src/getgit/fetchers/: __init__.py  commit_fetcher.py  commits.py  prs.py  pull_request_fetch_result.py  pull_request_fetcher.py  repo_fetcher.py  repos.py
src/getgit/github/: __init__.py
src/getgit/github_api/: __init__.py  github_client.py
src/getgit/infrastructure/: __init__.py
src/getgit/models/: __init__.py  authorship_report.py  commit.py  pull_request.py  report.py  review.py
src/getgit/services/: __init__.py  github_service.py
tests/_support/: __init__.py
tests/_support/github/: __init__.py  erroring_github_client.py  (+6 more)
tests/getgit/: test_argument_parser.py  test_models.py  test_storage.py
(+71 files in other folders)
