[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "getgit"
version = "0.1.1"
description = "Scrape GitHub authorship data (commits, PRs, JIRA codes) for a user."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
getgit = "getgit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
